--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zapeat.activity"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="8" />
 
-   <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -21,6 +23,7 @@
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -59,12 +62,11 @@
             android:name=".PromocaoListActivity"
             android:label="@string/title_activity_promocao_list" >
         </activity>
-        
-        <uses-library android:name="com.google.android.maps"/>
-        
+        <activity
+            android:name=".MapViewActivity"
+            android:label="@string/title_activity_map_view" />
+
+        <uses-library android:name="com.google.android.maps" />
     </application>
 
-</manifest>
-
-
-<!-- 0FaYmGMb5hDFqrIZLxfYTkFr3EBdfu8moHIZOMg KEY GOOGLE -->
+</manifest> <!-- 0FaYmGMb5hDFqrIZLxfYTkFr3EBdfu8moHIZOMg KEY GOOGLE -->
