--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	
     <application
         android:icon="@drawable/ic_launcher"
@@ -36,6 +38,10 @@
             android:name=".BrowserActivity"
             android:label="@string/title_activity_browser"
             android:screenOrientation="portrait" >
+        </activity>
+         <activity
+            android:name=".SemConexaoActivity"
+            android:label="@string/title_activity_browser">
         </activity>
 
         <service
