--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,11 +3,13 @@
     android:installLocation="preferExternal"
     android:versionCode="5"
     android:versionName="1.4" >
-
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
 
+    <uses-feature android:name="android.hardware.camera" />
+    
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -16,6 +18,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name="com.zapeat.activity.ZapeatApp"
@@ -70,8 +73,19 @@
 
         <activity
             android:name=".CategoriaActivity"
-            android:label="@string/title_activity_categoria" >
+            android:label="@string/title_activity_categoria"
+            android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="com.zapeat.activity.CheckInActivity"
+            android:label="@string/title_activity_check_in"
+            android:screenOrientation="portrait" >
+        </activity>
+        
+        <activity android:name="com.facebook.LoginActivity"/>
+        
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+        
     </application>
 
 </manifest> <!-- 0FaYmGMb5hDFqrIZLxfYTkFr3EBdfu8moHIZOMg KEY GOOGLE -->
